--- a/index.html
+++ b/index.html
@@ -24,6 +24,36 @@
 
   <main>
     <!-- TODO add houses stuff here! -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="house-card position-relative p-1">
+            <img class="house-img"
+              src="https://images.unsplash.com/photo-1574197130333-0f151ed5d361?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8d2VpcmQlMjBob3VzZXN8ZW58MHx8MHx8fDA%3D"
+              alt="a house">
+            <span class="house-price p-1">house price</span>
+            <b class="fs-2">HOUSE DESCRIPTION</b>
+            <p>house year</p>
+            <div>
+              <p>#bedrooms</p>
+              <p>#bathrooms</p>
+              <p>#levels</p>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-between align-items-end">
+              <div>
+                <img class="creator-img"
+                  src="https://images.unsplash.com/photo-1705841819902-f678852374b2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8d2VpcmQlMjBob3VzZXN8ZW58MHx8MHx8fDA%3D"
+                  alt="creator img goes here">
+                <small>creator name</small>
+              </div>
+              <span>listed on </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <section class="container">
       <div class="row">
